# sentinelRAG

./: .gitignore  README.md  pyproject.toml  requirements.txt  sentinel.db
backend/: config.py  main.py
backend/api/: routes_audit.py  routes_ingest.py  routes_query.py
backend/audit/: logger.py
backend/database/: db.py  models.py
backend/eval/: faithfulness.py  hallucination.py  relevance.py  scorer.py
backend/ingestion/: __init__.py  embedder.py  loader.py
backend/llm/: gemini_client.py  lobster_trap.py
backend/retrieval/: retriever.py
demo_docs/: financial_report.csv
frontend/: index.html
