[project]
name = "sentinelrag"
version = "0.1.0"
description = "Enterprise RAG quality control and security layer (SentinelRAG)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic-settings>=2.0.0",
  "sqlmodel>=0.0.22",
  "chromadb>=0.5.0",
  "openai>=1.40.0",
  "python-multipart>=0.0.9",
  "httpx>=0.27.0",
  "pypdf>=5.0.0",
  "pandas>=2.2.0",
  "docling>=2.26.0",
  "langchain-docling>=2.0.0",
  "langchain-core>=1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
